--- a/public/index.html
+++ b/public/index.html
@@ -9,9 +9,7 @@
       name="description"
       content="Le restaurant sera bientôt près de chez toi ! Viens tout de suite te renseigner."
     />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <title>Restaurant le Gericht</title>
+    <title>Restaurant - Le Gericht</title>
   </head>
 
   <body>
